k8s/gateway.yaml

# Service
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
spec:
  ports:
  - name: http
    port: 5000
    targetPort: gateway-port
  selector: 
    app: gateway
  type: ClusterIP

---

# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: gateway
  template: 
    metadata: 
      labels: 
        app: gateway
    spec:
      serviceAccountName: api-gateway
      containers:
      - name: gateway
        image: registry.gitlab.com/isaiahwong/cluster/api/gateway
        imagePullPolicy: Always
        ports:
        - name: gateway-port
          containerPort: 5000

        resources:
          requests:
            cpu: 80m
            memory: 60Mi
          limits:
            cpu: 100m
            memory: 128Mi

        readinessProbe:
          httpGet:
            path: /hz
            port: 5000
          initialDelaySeconds: 15
          periodSeconds: 3
        
        livenessProbe:
          httpGet:
            path: /hz
            port: 5000
          initialDelaySeconds: 3
          periodSeconds: 3

      imagePullSecrets:
      - name: gitlab-auth
