k8s/webhook.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gateway-webhook
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webhook-server
  namespace: gateway-webhook
  labels:
    app: webhook-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webhook-server
  template:
    metadata:
      labels:
        app: webhook-server
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1234
      containers:
      - name: server
        image: registry.gitlab.com/isaiahwong/cluster/api/gateway/webhook
        imagePullPolicy: IfNotPresent

        ports:
        - containerPort: 8443
          name: webhook-api

        volumeMounts:
        - name: webhook-tls-certs
          mountPath: /run/secrets/tls
          readOnly: true

      volumes:
      - name: webhook-tls-certs
        secret:
          secretName: webhook-server-tls
---
apiVersion: v1
kind: Service
metadata:
  name: webhook-server
  namespace: gateway-webhook
spec:
  selector:
    app: webhook-server
  ports:
    - port: 443
      targetPort: webhook-api
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: demo-webhook
webhooks:
  - name: webhook-server.gateway-webhook.svc
    clientConfig:
      service:
        name: webhook-server
        namespace: gateway-webhook
        path: "/webhook"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMwRENDQWJnQ0NRRDNYZkRyVVpKOVd6QU5CZ2txaGtpRzl3MEJBUXNGQURBcU1TZ3dKZ1lEVlFRRERCOUIKWkcxcGMzTnBiMjRnUTI5dWRISnZiR3hsY2lCWFpXSm9iMjlySUVOQk1CNFhEVEU1TURrd01qQTVNamMxTlZvWApEVEU1TVRBd01qQTVNamMxTlZvd0tqRW9NQ1lHQTFVRUF3d2ZRV1J0YVhOemFXOXVJRU52Ym5SeWIyeHNaWElnClYyVmlhRzl2YXlCRFFUQ0NBU0l3RFFZSktvWklodmNOQVFFQkJRQURnZ0VQQURDQ0FRb0NnZ0VCQUxxb1R6R2EKVXlSbkNSQVRib3VSL1BJbTN5R1FCczVMQkVPaEt6ak8wbVBTYitYQjlDK2l3dEF6U1NlMGxLUmtWNnJCSk9UbQp6NUFwVXhmV05C [...]
    rules:
      - operations: ["*"]
        apiGroups: ["*"]
        apiVersions: ["*"]
        resources: ["services"]
